--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 	<div class="main-wrapper">
-		<header class="main-header group">
-			<h1 class="main-logo"><a href="#">Logo</a></h1>
-			<ul class="main-nav">
-				<li><a href="#">Link 1</a></li>
-				<li><a href="#">Link 2</a></li>
-				<li><a href="#">Link 3</a></li>
-				<li><a href="#">Link 4</a></li>
-			</ul>
-		</header>
+		<div id="burger">W
+			<header class="main-header group">
+				<h1 class="main-logo"><a href="#">Logo</a></h1>
+				<ul class="main-nav">
+					<li><a href="#">Link 1</a></li>
+					<li><a href="#">Link 2</a></li>
+					<li><a href="#">Link 3</a></li>
+					<li><a href="#">Link 4</a></li>
+				</ul>
+			</header>
+		</div>
 		<div class="main-banner">
 			<h1>This is the Main Banner Heading</h1>
 			<p>Andouille pork chop pancetta drumstick ground round beef ribs swine brisket ham.</p>
@@ -45,5 +47,6 @@
 			<p>&copy;2014 Example Layout</p>
 		</footer>
 	</div>
+<script src="jquery-1.12.0.min.js"></script>
 </body>
 </html>
