--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<p>&copy;2014 Example Layout</p>
 		</footer>
 	</div>
-<script src="jquery-1.12.0.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
