--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="main-wrapper">
 		<div id="burger">W
-			<header class="main-header group">
+			<header class="main-header group" id="menu">
 				<h1 class="main-logo"><a href="#">Logo</a></h1>
 				<ul class="main-nav">
 					<li><a href="#">Link 1</a></li>
