--- a/index.html
+++ b/index.html
@@ -8,27 +8,41 @@
 </head>
 <body>
 	<div class="main-wrapper">
-		<div id="burger">W
+      <h1 class="main-logo"><a href="#">Logo</a></h1>
 			<header class="main-header group" id="menu">
-				<h1 class="main-logo"><a href="#">Logo</a></h1>
-				<ul class="main-nav">
-					<li><a href="#">Link 1</a></li>
-					<li><a href="#">Link 2</a></li>
-					<li><a href="#">Link 3</a></li>
-					<li><a href="#">Link 4</a></li>
-				</ul>
+        <div id="burger"><div id="imgb"><div class="x"></div><div class="x"></div><div class="x"></div></div>
+        <div id="fullnav">
+				  <ul class="main-nav">
+					 <li><a href="#">Link 1</a></li>
+					 <li><a href="#">Link 2</a></li>
+					 <li><a href="#">Link 3</a></li>
+					 <li><a href="#">Link 4</a></li>
+				  </ul>
+        </div>
+        </div>
 			</header>
-		</div>
+		
 		<div class="main-banner">
-			<h1>This is the Main Banner Heading</h1>
-			<p>Andouille pork chop pancetta drumstick ground round beef ribs swine brisket ham.</p>
+			<h1><span id="att">Attempt at</span> Nice <code>CSS</code> Loading Dots</h1><h3 id="asdf">I wish I knew how to align them.</h3>
+      <svg width="900" height="10">
+        <g>
+        <circle cx="3" cy="3" r="2" stroke="green"
+  stroke-width=1 fill="green" />
+          <circle cx="3" cy="3" r="2" stroke="green"
+  stroke-width=1 fill="green" />
+          <circle cx="3" cy="3" r="2" stroke="green"
+  stroke-width=1 fill="green" />
+          <circle cx="3" cy="3" r="2" stroke="green"
+  stroke-width=1 fill="green" />
+        </g>
+      </svg>
 		</div>
 		<div class="content-row group">
-			<div class="extra-content col">
-				<h3>Extra Content</h3>
-				<p>Filet mignon turkey flank doner strip steak. Frankfurter ham hock turkey, venison sirloin pig chuck shank capicola hamburger doner spare ribs boudin.</p>
+			<div class="secondary-content col">
+				<h3>Secondary Content</h3>
+				<p>Strip steak tenderloin kevin swine meatloaf capicola, doner beef turducken pancetta corned beef pork loin shoulder.</p>
 				<hr>
-				<p> Drumstick bresaola meatloaf ham hock salami tri-tip landjaeger beef filet mignon biltong boudin turkey.</p>
+				<p>Pork filet mignon leberkas, tail swine venison pancetta turkey shoulder brisket <strong><span id="an"><a href="https://teamtreehouse.com/chalkers">chalkers likes hamburgers.</a></span></strong></p>
 			</div>
 			<div class="primary-content col">
 				<h2>Primary Content</h2>
@@ -36,12 +50,13 @@
 				<p>Bacon ipsum dolor sit amet chicken pork ground round brisket corned beef ball tip shank tail salami filet mignon ham hock pork belly venison shankle. Pig kielbasa drumstick sausage pork chop boudin. Chicken t-bone salami pork chop, beef ribs kevin ham tri-tip beef venison biltong brisket.</p>
 				<p>Venison strip steak meatball chicken, brisket prosciutto sirloin. Capicola drumstick brisket tri-tip salami. Chicken beef jerky, tail turkey prosciutto cow ham sirloin boudin tenderloin. Meatloaf tri-tip turducken brisket andouille, pork belly corned beef fatback hamburger.</p>
 			</div>
-			<div class="secondary-content col">
-				<h3>Secondary Content</h3>
-				<p>Strip steak tenderloin kevin swine meatloaf capicola, doner beef turducken pancetta corned beef pork loin shoulder.</p>
+      <div class="extra-content col">
+				<h3>Extra Content</h3>
+				<p>Filet mignon turkey flank doner strip steak. Frankfurter ham hock turkey, venison sirloin pig chuck shank capicola hamburger doner spare ribs boudin.</p>
 				<hr>
-				<p>Pork filet mignon leberkas, tail swine venison pancetta turkey shoulder brisket chalkers likes hamburgers.</p>
+				<p> Drumstick bresaola meatloaf ham hock salami tri-tip landjaeger beef filet mignon biltong boudin turkey.</p>
 			</div>
+			
 		</div>
 		<footer class="main-footer">
 			<p>&copy;2014 Example Layout</p>
